# TLI

./: .gitignore  CMakeLists.txt  README.md  benchmark.cc  benchmark.h  downsample.py  downsample_50.py  generate.cc  reproduce.sh  searches.cpp  util.h
RMI/plr/: .gitignore  Cargo.toml  README.md
RMI/plr/benches/: plr_bench.rs  spline_bench.rs
RMI/plr/src/: lib.rs  test_util.rs  util.rs
RMI/plr/src/regression/: greedy.rs  mod.rs  optimal.rs
RMI/plr/src/spline/: greedy.rs  mod.rs
RMI/rmi_lib/: Cargo.toml
RMI/src/: main.rs
benchmarks/: benchmark_alex.cc  benchmark_alex.h  benchmark_art.cc  benchmark_art.h  benchmark_artolc.cc  benchmark_artolc.h  benchmark_btree.cc  benchmark_btree.h  benchmark_dynamic_pgm.cc  benchmark_dynamic_pgm.h  benchmark_fast.cc  benchmark_fast.h  benchmark_finedex.cc  benchmark_finedex.h  benchmark_fst.cc  benchmark_fst.h  benchmark_lipp.cc  benchmark_lipp.h  benchmark_mabtree.cc  benchmark_mabtree.h  benchmark_pgm.cc  benchmark_pgm.h  benchmark_rmi.cc  benchmark_rmi.h  benchmark_sindex.cc  benchmark_sindex.h  benchmark_ts.cc  benchmark_ts.h  benchmark_wormhole.cc  benchmark_wormhole.h  benchmark_xindex.cc  benchmark_xindex.h  common.h
competitors/: alex.h  art.h  art_int.h  artolc.h  base.h  dynamic_pgm_index.h  fast.h  finedex.h  fst_wrapper.h  lipp.h  mabtree.h  pgm_index.h  rmi.h  sindex.h  stx_btree.h  ts.h  wormhole.h  xindex.h
competitors/ALEX/: README.md
competitors/ARTSynchronized/: Key.h
competitors/CHT/: .gitignore  CMakeLists.txt  LICENSE  README.md  bench.cc  bench_end_to_end.cc  example.cc  grid_search.sh
competitors/CHT/cmake_modules/: googletest.cmake
competitors/CHT/include/cht/: builder.h  cht.h  common.h
competitors/CHT/test/: cht_test.cc
competitors/FST/: .gitlab-ci.yml  CMakeLists.txt  README.md
competitors/FST/bench/: filter_surf.hpp  run.sh
competitors/FST/include/: bitvector.hpp  config.hpp  fst.hpp  fst_builder.hpp  hash.hpp  label_vector.hpp  louds_dense.hpp  louds_sparse.hpp  popcount.h  rank.hpp  select.hpp
competitors/FST/test/: keys.txt  local.cmake  long_keys.txt  test_fst_example.cpp  test_fst_example_words.cpp  test_fst_ints.cpp  test_fst_small.cpp  words.txt
competitors/FST/test/unitTest/: CMakeLists.txt  test_bitvector.cpp  test_label_vector.cpp  test_louds_dense.cpp  test_louds_dense_small.cpp  test_louds_sparse.cpp  test_louds_sparse_small.cpp  test_rank.cpp  test_select.cpp
competitors/analysis-rmi/: .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  README.md  example.cpp  requirements.txt
competitors/analysis-rmi/experiments/: CMakeLists.txt  index_comparison.cpp  rmi_build.cpp  rmi_errors.cpp  rmi_guideline.cpp  rmi_intervals.cpp  rmi_lookup.cpp  rmi_segmentation.cpp
competitors/analysis-rmi/include/rmi/: models.hpp  rmi.hpp
competitors/analysis-rmi/include/rmi/util/: fn.hpp  search.hpp
competitors/analysis-rmi/scripts/: download_data.sh  matplotlibrc  plot_all.sh  plot_index_comparison.py  plot_paper.sh  plot_rmi_build.py  plot_rmi_errors.py  plot_rmi_guideline.py  plot_rmi_intervals.py  plot_rmi_lookup.py  plot_rmi_segmentation.py  run_all.sh  run_index_comparison.sh  run_rmi_build.sh  run_rmi_errors.sh  run_rmi_guideline.sh  run_rmi_intervals.sh  run_rmi_lookup.sh  run_rmi_segmentation.sh
competitors/analysis-rmi/scripts/rmi_ref/: books_200M_uint64.json  fb_200M_uint64.json  osm_cellids_200M_uint64.json  prepare_rmi_ref.sh  wiki_ts_200M_uint64.json
competitors/finedex/: CMakeLists.txt  README.md  SConstruct  finedex_benchmark.cpp  finedex_searchinsert.cpp  finedex_ycsb.cpp  learnedindex_benchmark.cpp  learnedindex_searchinsert.cpp  learnedindex_ycsb.cpp  load_factor.cpp  main.scons  masstree_benchmark.cpp  masstree_searchinsert.cpp  masstree_ycsb.cpp  tree_li_compare.cpp  xindex_benchmark.cpp  xindex_searchinsert.cpp  xindex_ycsb.cpp
competitors/sindex/: .gitignore  CMakeLists.txt  README.md  helper.h  microbench.cpp  sindex.h  sindex_buffer.h  sindex_buffer_impl.h  sindex_group.h  sindex_group_impl.h  sindex_impl.h  sindex_model.h  sindex_root.h  sindex_root_impl.h  sindex_util.h
competitors/ts/: CMakeLists.txt  LICENSE  README.md  bench_end_to_end.cc  benchmark.sh  example.cc  tune.sh
competitors/ts/include/ts/: builder.h  common.h  ts.h
competitors/ts/include/ts/ts_cht/: builder.h  cht.h  common.h
competitors/xindex/: .gitignore  xindex.h  xindex_buffer.h  xindex_buffer_impl.h  xindex_group.h  xindex_group_impl.h  xindex_impl.h  xindex_model.h  xindex_root.h  xindex_root_impl.h  xindex_util.h
dtl/: adept.hpp
fast64/: .gitignore  Cargo.toml  build.rs  fast64.h
fast64/benches/: main_bench.rs
fast64/c/: Makefile  lookup.c  lookup.h
fast64/src/: lib.rs
results/: rmi_gridsearch_time.csv
results/errors-results/: books_200M_uint64_equality_sqls_20M_0.000000rq_0.500000nl_0.000000i_results_table.csv  books_200M_uint64_ops_20M_0.000000rq_0.500000nl_0.000000i_results_table.csv  fb_200M_uint64_equality_sqls_20M_0.000000rq_0.500000nl_0.000000i_results_table.csv  fb_200M_uint64_ops_20M_0.000000rq_0.500000nl_0.000000i_results_table.csv  osm_cellids_200M_uint64_equality_sqls_20M_0.000000rq_0.500000nl_0.000000i_results_table.csv  osm_cellids_200M_uint64_ops_20M_0.000000rq_0.500000nl_0.000000i_results_table.csv  wiki_ts_200M_uint64_equality_sqls_20M_0.000000rq_0.500000nl_0.000000i_results_table.csv  wiki_ts_200M_uint64_ops_20M_0.000000rq_0.500000nl_0.000000i_results_table.csv
results/latency-results/: books_200M_uint64_equality_sqls_20M_0.000000rq_0.500000nl_0.000000i_results_table.csv  books_200M_uint64_equality_sqls_20M_0.000000rq_0.500000nl_0.500000i_0m_10Mbulkload_results_table.csv  (+16 more)
scripts/: build_rmis.sh  execute.sh  execute_all.sh  execute_errors.sh  execute_latency.sh  execute_multithread.sh  execute_perf.sh  execute_tune.sh  prepare.sh  prepare_multithread.sh  prepare_tune.sh
searches/: branching_binary_search.h  exponential_search.h  interpolation_search.h  linear_search.h  linear_search_avx.h  search.cpp  search.h
utils/: perf_event.h
wormhole/: concbench.c  easydemo.c  kv.c  kv.h  lib.c  lib.h  stresstest.c  wh.c  wh.h
(+519 files in other folders)
