[package]
name = "fast64"
version = "0.1.0"
authors = ["Ryan Marcus <ryan@ryanmarc.us>"]
edition = "2018"
build = "build.rs"
license = "GPL-3.0"

[lib]
name = "fast64"
crate-type = ["lib", "staticlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num = "0.2.1"

[build-dependencies]
cc = "1.0.50"

[dev-dependencies]
criterion = "0.3"
rand = "0.7.3"

[[bench]]
name = "main_bench"
harness = false




